--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
       
             <header>
                 <h1>Meus Projetos</h1>
-                <p>Oioi! Seja bem vinde ao meu site! Eu sou Giovana Blank, e aqui você poderá
-                    encontrar alguns dos projetos desenvolvidos por mim <3
+                <p>Oioi! Boas-vindas ao meu portfolio pessoal! Eu sou Giovana Blank, e aqui você poderá
+                    encontrar alguns dos projetos desenvolvidos por mim. ALguns foram desenvolvidos durante eventos, 
+                    outros, com o obejtivo de aprender e praticar alguma habilidade.
                 </p>
+                <p>Em meu portfolio profissional, <a href="https://senacscs.github.io/t2/blank">senacscs.github.io/t2/blank</a>,
+                você pode encontrar projetos que desenvolvi ao longo do meu ensino médio e técnico no Senac Santa Cruz do Sul.</p>
             </header>
 
             <section class="site-container">
                 <div
                     class="project project-1"
-                    onclick="window.location.href='designResponsivo/'">
+                    onclick="window.location.href=''">
                     <div class="details-wrap">
                         <div class="details">
                             <h2>Design Responsivo</h2>
@@ -32,7 +35,7 @@
                 </div>
 
                 <div class="project project-2"
-                onclick="window.location.href='netflixPrototype/'">
+                onclick="window.location.href=''">
                     <div class="details-wrap">
                         <div class="details">
                             <h2>Protótipo Netflix</h2>
