--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     onclick="window.location.href=''">
                     <div class="details-wrap">
                         <div class="details">
-                            <h2>Design Responsivo</h2>
-                            <p>Produzido com o intuito de praticar o web design responsivo.
+                            <h2>Em breve</h2>
+                            <p>Logo farei o upload deste projeto!
                             </p>
                         </div>
                     </div>
@@ -38,8 +38,8 @@
                 onclick="window.location.href=''">
                     <div class="details-wrap">
                         <div class="details">
-                            <h2>Protótipo Netflix</h2>
-                            <p>Produzido a partir do projeto disponível no canal <a href="https://youtu.be/P7t13SGytRk">Traversy Media</a>
+                            <h2>Em breve</h2>
+                            <p>Logo farei o upload deste projeto!
                             </p>
                         </div>
                     </div>
